WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54160
REGRESSION (
r77101
) box-shadow sometimes renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=54160
Summary
REGRESSION (r77101) box-shadow sometimes renders incorrectly
Simon Fraser (smfr)
Reported
2011-02-09 19:11:02 PST
Created
attachment 81912
[details]
Testcase The attached testcase shows an issue where a box-shadow gets drawn incorrectly behind another element sometimes.
Attachments
Testcase
(527 bytes, text/html)
2011-02-09 19:11 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(15.61 KB, patch)
2011-02-09 21:02 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-02-09 20:29:10 PST
The bug is that endShadowLayer() does graphicsContext->clipToImageBuffer(m_layerImage, FloatRect(m_layerOrigin, m_layerImage->size())); but not all of m_layerImage->size() was cleared, so may contains bits from some previous shadow.
Simon Fraser (smfr)
Comment 2
2011-02-09 21:02:21 PST
Created
attachment 81918
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-02-09 21:16:34 PST
http://trac.webkit.org/changeset/78173
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug